// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldGranularity Component should export select options: toolbarFieldOptions 1`] = `
[
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularity, {"context":"Daily"})",
    "value": "Daily",
  },
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularity, {"context":"Weekly"})",
    "value": "Weekly",
  },
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularity, {"context":"Monthly"})",
    "value": "Monthly",
  },
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularity, {"context":"Quarterly"})",
    "value": "Quarterly",
  },
]
`;

exports[`ToolbarFieldGranularity Component should handle updating granularity through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "filter": "granularity",
        "type": "SET_QUERY_GRAPH",
        "value": "Quarterly",
        "viewId": undefined,
      },
      {
        "filter": "beginning",
        "type": "SET_QUERY",
        "value": "2014-07-01T00:00:00.000Z",
        "viewId": undefined,
      },
      {
        "filter": "ending",
        "type": "SET_QUERY",
        "value": "2019-07-01T23:59:59.999Z",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldGranularity Component should handle updating granularity through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "filter": "granularity",
        "type": "SET_QUERY_GRAPH",
        "value": "dolor sit",
        "viewId": "loremIpsum",
      },
      {
        "filter": "beginning",
        "type": "SET_QUERY",
        "value": "2019-06-20T00:00:00.000Z",
        "viewId": "loremIpsum",
      },
      {
        "filter": "ending",
        "type": "SET_QUERY",
        "value": "2019-07-20T23:59:59.999Z",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldGranularity Component should render a basic component: basic 1`] = `
<Select
  alignment={
    {
      "position": "left",
    }
  }
  aria-label="t(curiosity-toolbar.placeholder, {"context":"granularity"})"
  data-test="toolbarFieldGranularity"
  onSelect={[Function]}
  options={
    [
      {
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularity, {"context":"Daily"})",
        "value": "Daily",
      },
      {
        "isSelected": true,
        "title": "t(curiosity-toolbar.label_granularity, {"context":"Weekly"})",
        "value": "Weekly",
      },
      {
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularity, {"context":"Monthly"})",
        "value": "Monthly",
      },
      {
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularity, {"context":"Quarterly"})",
        "value": "Quarterly",
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {"context":"granularity"})"
  selectedOptions="Weekly"
/>
`;
